sending huge changes

--- a/config/database.yml
+++ b/config/database.yml
@@ -20,16 +20,19 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  host: <%= ENV['DB_HOST'] %>
+  username: <%= ENV['DB_USERNAME'] %>
+  password: <%= ENV['DB_PASSWORD'] %>
 
 development:
   <<: *default
-  database: lineimar_blog_development
+  database: complete_blog_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user running Rails.
-  #username: lineimar_blog
+  #username: complete_blog
 
   # The password associated with the postgres role (username).
   #password:
@@ -57,7 +60,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: lineimar_blog_test
+  database: complete_blog_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -81,6 +84,6 @@ test:
 #
 production:
   <<: *default
-  database: lineimar_blog_production
-  username: lineimar_blog
-  password: <%= ENV["LINEIMAR_BLOG_DATABASE_PASSWORD"] %>
+  database: complete_blog_production
+  username: DB_USERNAME
+  password: <%= ENV["DB_PASSWORD"] %>
