--- a/config/database.yml
+++ b/config/database.yml
@@ -85,6 +85,5 @@ test:
 production:
   <<: *default
   database: complete_blog_production
-  username: <%= ENV["DB_USERNAME"] %>
+  username: completeBlog
   password: <%= ENV["DB_PASSWORD"] %>
-  host: heroku
