--- a/config/database.yml
+++ b/config/database.yml
@@ -21,8 +21,8 @@ default: &default
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   host: <%= ENV['DB_HOST'] %>
-  username: completeBlog
-  password: completeBlog16
+  username: <%= ENV['DB_USERNAME'] %>
+  password: <%= ENV['DB_PASSWORD'] %>
 
 development:
   <<: *default
@@ -85,6 +85,5 @@ test:
 production:
   <<: *default
   database: complete_blog_production
-  host: heroku
-  username: completeBlog
-  password: completeBlog16
+  username: <%= ENV["DB_USERNAME"] %>
+  password: <%= ENV["DB_PASSWORD"] %>
