--- a/config/database.yml
+++ b/config/database.yml
@@ -20,7 +20,6 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  host: <%= ENV['DB_HOST'] %>
   username: <%= ENV['DB_USERNAME'] %>
   password: <%= ENV['DB_PASSWORD'] %>
 
@@ -83,7 +82,7 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 production:
-<<: *default
-database: complete_blog_production
-username: k
-password: <%= ENV['MYAPP_DATABASE_PASSWORD'] %>
+  <<: *default
+  database: complete_blog_production
+  username: k
+  password: <%= ENV["DB_PASSWORD"] %>
